--- a/covid19_logistic.ipynb
+++ b/covid19_logistic.ipynb
@@ -8,13 +8,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run logistic model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fitting a logistic model on total cases of a country. Select the country and check the predicted peak of infections and total population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T12:59:38.766669Z",
+     "start_time": "2020-04-04T12:59:38.435448Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9e363047e42f44db93abb38001eaf56a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='nation', index=84, options=('Afghanistan', 'Albania', 'Algeria', '…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "interact(logistic_covid, \n",
+    "         covid19_df = fixed(Confirmed),\n",
+    "         nation = Dropdown(options=list(Confirmed.columns), value='Italy'));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below you can find the code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Load modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:48.601852Z",
-     "start_time": "2020-04-04T09:57:46.355490Z"
-    }
+     "end_time": "2020-04-04T12:58:58.845783Z",
+     "start_time": "2020-04-04T12:58:56.977047Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -36,7 +98,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<b> Preface </b>\n",
     "    \n",
@@ -45,7 +109,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Load data from JHU"
    ]
@@ -55,9 +121,10 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:49.875369Z",
-     "start_time": "2020-04-04T09:57:49.870382Z"
-    }
+     "end_time": "2020-04-04T12:58:58.857604Z",
+     "start_time": "2020-04-04T12:58:58.846787Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -78,9 +145,10 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:50.621339Z",
-     "start_time": "2020-04-04T09:57:50.617500Z"
-    }
+     "end_time": "2020-04-04T12:58:58.871546Z",
+     "start_time": "2020-04-04T12:58:58.863672Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -92,9 +160,10 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:51.668663Z",
-     "start_time": "2020-04-04T09:57:51.260466Z"
-    }
+     "end_time": "2020-04-04T12:58:59.570894Z",
+     "start_time": "2020-04-04T12:58:59.138263Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -103,7 +172,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Structure dataset"
    ]
@@ -113,9 +184,10 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:52.436410Z",
-     "start_time": "2020-04-04T09:57:52.420407Z"
-    }
+     "end_time": "2020-04-04T12:59:00.198132Z",
+     "start_time": "2020-04-04T12:59:00.176405Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -128,9 +200,10 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:53.040058Z",
-     "start_time": "2020-04-04T09:57:53.035110Z"
-    }
+     "end_time": "2020-04-04T12:59:00.399744Z",
+     "start_time": "2020-04-04T12:59:00.391950Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -142,9 +215,10 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:53.688762Z",
-     "start_time": "2020-04-04T09:57:53.670647Z"
-    }
+     "end_time": "2020-04-04T12:59:00.664458Z",
+     "start_time": "2020-04-04T12:59:00.646661Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -153,14 +227,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Logistic model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Inspired by https://towardsdatascience.com/covid-19-infection-in-italy-mathematical-models-and-predictions-7784b4d7dd8d)"
    ]
@@ -170,9 +248,10 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:54.756577Z",
-     "start_time": "2020-04-04T09:57:54.751541Z"
-    }
+     "end_time": "2020-04-04T12:59:01.496048Z",
+     "start_time": "2020-04-04T12:59:01.488848Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -185,9 +264,10 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:55.530700Z",
-     "start_time": "2020-04-04T09:57:55.517734Z"
-    }
+     "end_time": "2020-04-04T12:59:01.765265Z",
+     "start_time": "2020-04-04T12:59:01.748488Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -225,54 +305,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Run logistic model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fitting a logistic model on total cases of a country. Select the country and check the predicted peak of infections and total population"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T09:57:57.758018Z",
-     "start_time": "2020-04-04T09:57:57.370456Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e162f15a5fe640e1add1679caa710ca4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='nation', index=84, options=('Afghanistan', 'Albania', 'Algeria', '…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "interact(logistic_covid, \n",
-    "         covid19_df = fixed(Confirmed),\n",
-    "         nation = Dropdown(options=list(Confirmed.columns), value='Italy'));"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
