--- a/covid19_loglogplot.ipynb
+++ b/covid19_loglogplot.ipynb
@@ -8,206 +8,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:31:42.250440Z",
-     "start_time": "2020-04-04T10:31:42.237305Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from scipy.integrate import odeint\n",
-    "import matplotlib.pyplot as plt\n",
-    "from datetime import datetime,timedelta\n",
-    "# from sklearn.metrics import mean_squared_error\n",
-    "# from scipy.optimize import curve_fit, fsolve\n",
-    "\n",
-    "from IPython.display import Image\n",
-    "from ipywidgets import interact\n",
-    "from ipywidgets import fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
-    "\n",
-    "from pandas.tseries.offsets import Week\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Preface </b>\n",
-    "    \n",
-    "    Here are being condensed few simple models and data visualization tools that capture my attention in literature. The idea is to play around with it and understand how important is to limit social contact in this period, and also the importance of modelling for understanding and timely actions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load data from JHU"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:02.655868Z",
-     "start_time": "2020-04-04T10:24:02.649925Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def loadData(fileName):\n",
-    "    data = pd.read_csv(baseURL + fileName) \\\n",
-    "             .drop(['Lat', 'Long'], axis=1) #\\\n",
-    "#              .melt(id_vars=['Province/State', 'Country/Region'], \n",
-    "#                  var_name='date', value_name=columnName) \\\n",
-    "#              .astype({'date':'datetime64[ns]', columnName:'Int64'}, \n",
-    "#                  errors='ignore')\n",
-    "    data['Province/State'].fillna('<all>', inplace=True)\n",
-    "#     data[columnName].fillna(0, inplace=True)\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:03.313870Z",
-     "start_time": "2020-04-04T10:24:03.309375Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "baseURL = \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:04.386919Z",
-     "start_time": "2020-04-04T10:24:03.736370Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Confirmed = loadData(\"time_series_covid19_confirmed_global.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Structure dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:05.419257Z",
-     "start_time": "2020-04-04T10:24:05.401304Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# grouping by country\n",
-    "Confirmed = Confirmed.groupby(['Country/Region']).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:05.852274Z",
-     "start_time": "2020-04-04T10:24:05.847287Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Confirmed = Confirmed.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:06.953288Z",
-     "start_time": "2020-04-04T10:24:06.934799Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Confirmed.index = pd.to_datetime(Confirmed.index)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# LogLog visualization (when are we on our way out of pandemic)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspired by https://t.co/q2AtUQBX5P?amp=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:08.055932Z",
-     "start_time": "2020-04-04T10:24:08.024967Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Confirmedweeklyrates = (Confirmed - Confirmed.shift(1, freq=Week()).reindex(Confirmed.index)).fillna(value=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:08.820046Z",
-     "start_time": "2020-04-04T10:24:08.813068Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def plot_infectionrate(Confirmedweeklyrates, country, return_plot = True, return_df=False):\n",
-    "    \"\"\"\n",
-    "    Confirmedweeklyrates: rate of infection adjusted from JHU\n",
-    "    country: string\n",
-    "    \"\"\"\n",
-    "    country = list(country)\n",
-    "    res = Confirmedweeklyrates[country]\n",
-    "    if return_plot is True:\n",
-    "        res.plot()\n",
-    "    if return_df is True:\n",
-    "        return(res);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualization of infection rate (weekly new cases)"
+    "# Visualization of infection rate (weekly new cases)"
    ]
   },
   {
@@ -219,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:11.479358Z",
-     "start_time": "2020-04-04T10:24:10.727214Z"
+     "end_time": "2020-04-04T13:03:16.591020Z",
+     "start_time": "2020-04-04T13:03:15.747030Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a27087ca8581419186015963723c2cb8",
+       "model_id": "c4b09e836c79411b9c0ca5dde88e782d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## loglog plot"
+    "# loglog plot"
    ]
   },
   {
@@ -276,60 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T10:24:13.760198Z",
-     "start_time": "2020-04-04T10:24:13.746722Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Confirmedweeklyrates = (Confirmed - Confirmed.shift(1, freq=Week()).reindex(Confirmed.index)).fillna(value=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:39:16.418546Z",
-     "start_time": "2020-04-04T10:39:16.410463Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def loglog_covid2(Confirmedweeklyrates, countries):\n",
-    "    \"\"\"\n",
-    "    Confirmed: df adjustedc from JHU\n",
-    "    countries: list in columns of Confirmed\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    fig, axes = plt.subplots(figsize=(15,8))\n",
-    "    \n",
-    "\n",
-    "    axes.loglog(Confirmed.sum(axis=1), Confirmedweeklyrates[list(countries)].values, 'o')\n",
-    "    axes.legend(countries)\n",
-    "    axes.set_title('Loglog')\n",
-    "    axes.set_ylabel('Weekly increase of positive cases')\n",
-    "    axes.set_xlabel('Total cases globally')\n",
-    "    axes.set_xlim([1e4,1e7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T10:40:13.589818Z",
-     "start_time": "2020-04-04T10:40:12.412833Z"
+     "end_time": "2020-04-04T13:03:20.492689Z",
+     "start_time": "2020-04-04T13:03:19.140868Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e223dd0f41042ca8f4f2cdcc38e8284",
+       "model_id": "97ca6df9c9d143598ead3753e647fd19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,9 +114,271 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below you can find the code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Import modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:51.949870Z",
+     "start_time": "2020-04-04T13:00:50.088941Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.integrate import odeint\n",
+    "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime,timedelta\n",
+    "# from sklearn.metrics import mean_squared_error\n",
+    "# from scipy.optimize import curve_fit, fsolve\n",
+    "\n",
+    "from IPython.display import Image\n",
+    "from ipywidgets import interact\n",
+    "from ipywidgets import fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
+    "\n",
+    "from pandas.tseries.offsets import Week\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "<b> Preface </b>\n",
+    "    \n",
+    "    Here are being condensed few simple models and data visualization tools that capture my attention in literature. The idea is to play around with it and understand how important is to limit social contact in this period, and also the importance of modelling for understanding and timely actions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Load data from JHU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:51.964815Z",
+     "start_time": "2020-04-04T13:00:51.949870Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "def loadData(fileName):\n",
+    "    data = pd.read_csv(baseURL + fileName) \\\n",
+    "             .drop(['Lat', 'Long'], axis=1) #\\\n",
+    "#              .melt(id_vars=['Province/State', 'Country/Region'], \n",
+    "#                  var_name='date', value_name=columnName) \\\n",
+    "#              .astype({'date':'datetime64[ns]', columnName:'Int64'}, \n",
+    "#                  errors='ignore')\n",
+    "    data['Province/State'].fillna('<all>', inplace=True)\n",
+    "#     data[columnName].fillna(0, inplace=True)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:52.407377Z",
+     "start_time": "2020-04-04T13:00:52.400314Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "baseURL = \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:53.006195Z",
+     "start_time": "2020-04-04T13:00:52.699874Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "Confirmed = loadData(\"time_series_covid19_confirmed_global.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Structure dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:53.545539Z",
+     "start_time": "2020-04-04T13:00:53.527489Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# grouping by country\n",
+    "Confirmed = Confirmed.groupby(['Country/Region']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:53.794862Z",
+     "start_time": "2020-04-04T13:00:53.786411Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "Confirmed = Confirmed.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:54.061038Z",
+     "start_time": "2020-04-04T13:00:54.041033Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "Confirmed.index = pd.to_datetime(Confirmed.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# LogLog visualization (when are we on our way out of pandemic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Inspired by https://t.co/q2AtUQBX5P?amp=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:54.877913Z",
+     "start_time": "2020-04-04T13:00:54.848064Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "Confirmedweeklyrates = (Confirmed - Confirmed.shift(1, freq=Week()).reindex(Confirmed.index)).fillna(value=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:55.174926Z",
+     "start_time": "2020-04-04T13:00:55.167307Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot_infectionrate(Confirmedweeklyrates, country, return_plot = True, return_df=False):\n",
+    "    \"\"\"\n",
+    "    Confirmedweeklyrates: rate of infection adjusted from JHU\n",
+    "    country: string\n",
+    "    \"\"\"\n",
+    "    country = list(country)\n",
+    "    res = Confirmedweeklyrates[country]\n",
+    "    if return_plot is True:\n",
+    "        res.plot()\n",
+    "    if return_df is True:\n",
+    "        return(res);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T13:00:59.041036Z",
+     "start_time": "2020-04-04T13:00:59.029364Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "def loglog_covid2(Confirmedweeklyrates, countries):\n",
+    "    \"\"\"\n",
+    "    Confirmed: df adjustedc from JHU\n",
+    "    countries: list in columns of Confirmed\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    fig, axes = plt.subplots(figsize=(15,8))\n",
+    "    \n",
+    "\n",
+    "    axes.loglog(Confirmed.sum(axis=1), Confirmedweeklyrates[list(countries)].values, 'o')\n",
+    "    axes.legend(countries)\n",
+    "    axes.set_title('Loglog')\n",
+    "    axes.set_ylabel('Weekly increase of positive cases')\n",
+    "    axes.set_xlabel('Total cases globally')\n",
+    "    axes.set_xlim([1e4,1e7])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
